Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-858

Creator crashes when starting App TRK on device

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt Creator 1.3.81 (2.0.0-alpha), Qt Creator 1.3.83 (2.0.0-beta)
    • All Other Issues
    • None
    • Windows Vista 64
      N82, App TRK 3.1.2
      5800 XpressMusic, System TRK 3.0.9
    • e82219b344ee471dbb5d8e7f1351404ff9616d6c

    Description

      Open a project with a Symbian device run configuration.
      Connect a phone via USB.
      Open projects mode, select the Symbian device run configuration.
      Click the small "i" button, Creator asks you to start App TRK on the device, cancel this.
      Start App TRK on the device, Creator crashes

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes