Symbian: Fix crash when launching trk on device after canceled prompt.

Introduce clearWriteQueue to TrkDevice and call it a device is
released to the SymbianDeviceManager in state 'open'.
In addition, if a launcher is destroyed before the protocol is through,
close the device (if the closeDevice property is set).
Task-number: QTCREATORBUG-858