src/shared/symbianutils/trkdevice.h
@@ -101,6 +101,9 @@ public:
     // Send an Ack synchronously, bypassing the queue
     bool sendTrkAck(unsigned char token);
 
+public slots:
+    void clearWriteQueue();
+
 signals:
     void messageReceived(const trk::TrkResult &result);
     // Emitted with the contents of messages enclosed in 07e, not for log output
